--- a/src/app/ComponentesAngular/login/login.component.html
+++ b/src/app/ComponentesAngular/login/login.component.html
@@ -1,24 +1,69 @@
 <div id="cuerpo">
 <div id="cuerpo-login">
   <div class="register">
-    <div class="item">
+    <div class="textos">
       <div class="titulo">titulo</div>
       <div class="l"></div>
       <div class="text-cuerpo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa ducimus temporibus ratione pariatur cupiditate autem aliquam modi voluptates fuga quos dolores quam, voluptatibus quis consequuntur similique, enim nemo aperiam sunt.</div>
     </div>
-    <div class="item">user</div>
     <div class="item">
-      <div>pass</div>
-      <input type="password">
-      <div>pass*</div>
-    </div>
-    <div class="item">
-      <div>nombre</div>
-      <div>correo</div>
-    </div>
-    <div class="item">
-      <div>tipo e</div>
-      <div>interes</div>
+        <div class="comp">
+          <!---------------------->
+          <div class="s-item">
+            <div class="datos">
+              <div>nombre</div>
+              <input type="text">
+            </div>
+            <div class="datos">
+                <div>apellido</div>
+                <input type="text">
+            </div>
+          </div>
+          <!---------------------->
+          <div class="s-item">
+              <div class="datos">
+                <div>User</div>
+                <input type="text">
+              </div>
+            </div>
+            <!---------------------->
+            <div class="s-item">
+                <div class="datos">
+                  <div>pasword</div>
+                  <input type="password">
+                </div>
+                <div class="datos">
+                    <div>re password</div>
+                    <input type="password">
+                </div>
+              </div>
+              <!---------------------->
+              <div class="s-item">
+                  <div class="datos">
+                    <div>tipo empresa</div>
+                    <input type="text">
+                  </div>
+                  <div class="datos">
+                      <div>interes</div>
+                      <input type="text">
+                  </div>
+                </div>
+                <!---------------------->
+          <div class="s-item">
+              <div class="datos">
+                <div>Correo</div>
+                <input type="text">
+              </div>
+            </div>
+        </div>
+        <div class="comp">
+          <!---------------------->
+          <div class="s-item">
+              <div class="term">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus id nesciunt magni perferendis doloremque, recusandae illo molestias, vel sed laboriosam placeat. Eligendi suscipit doloremque, natus facilis est id! Fugit!</div>
+              </div>
+            </div>
+        </div>
     </div>
   </div>
   <div class="login"></div>
