--- a/src/app/ComponentesAngular/login/login.component.scss
+++ b/src/app/ComponentesAngular/login/login.component.scss
@@ -12,16 +12,8 @@
         .register{
             width: 60%;
             height: 100%;
-            .item{
-                position: relative;
-                display: flex;
-                width: 100%;
-                height: auto;
-                flex-flow: column nowrap;
-                margin: 15px 10px;
-                input{
-                    width: 30%;
-                }
+            .textos{
+                margin: 10px 0;
                 .titulo{
                     padding: 18px 10px 0 0;
                     width: 100%;
@@ -38,6 +30,32 @@
                     padding: 0 10px 10px 0;
                     width: 100%;
                     height: auto;
+                }
+            }
+            .item{
+                position: relative;
+                display: flex;
+                width: 100%;
+                height: auto;
+                margin: 15px 0;
+                .comp{
+                    position: relative;
+                    width: 50%;
+                    height: auto;
+                    .s-item{
+                        position: relative;
+                        display: flex;
+                        .datos{
+                            padding: 10px 0;
+                            margin: 0 2.5%;
+                            width: 45%;
+                            height: auto;
+                        }
+                        .term{
+                            padding: 10px 0;
+                            margin: 0 0 0 10%;
+                        }
+                    }
                 }
             }
         }
