--- a/src/app/ComponentesAngular/home/home.component.html
+++ b/src/app/ComponentesAngular/home/home.component.html
@@ -1,4 +1,4 @@
-<!--aca esdonde se da la estructura en HTML-->
+<!--aca esdonde se da la estructura en HTML de home-->
 
  <div class="CuerpoDiv" >  
   <div class="Items">
