--- a/src/app/ComponentesAngular/home/home.component.html
+++ b/src/app/ComponentesAngular/home/home.component.html
@@ -4,8 +4,8 @@
   <div class="Items">
     <div class="Sector">
       <!-- Sector 1Pantalla inicial -->
-      <div class="Titulo ">Titulo No 1</div>
-      <div class="CuerpoText ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sunt reiciendis iusto tempore delectus sit consectetur sed magni obcaecati aperiam aspernatur, vel maxime dolorem eaque maiores possimus. Doloremque, iste! Similique?</div>
+      <div class="Titulo ">Sobre Nosotros</div>
+      <div class="CuerpoText ">Le Gestor de proyectos, es pensado como plataforma donde se podrá hacer una organización de las actividades de algún proyecto empresarial que se desea administrar de manera virtual y sencilla </div>
     </div>
 
     <div class="Sector" >
@@ -25,8 +25,8 @@
     </div>
     <div class="Sector">
       <!-- Sector 4 Pantalla inicial -->
-      <div class="Titulo ">Titulo 2</div>
-      <div class="CuerpoText ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur dicta laborum suscipit sunt reprehenderit eos quo temporibus culpa! Sit delectus alias sunt doloremque doloribus in omnis ipsa aut accusamus accusantium.</div>
+      <div class="Titulo ">Proyectos que se atienden  </div>
+      <div class="CuerpoText "> En el Gestor de Proyectos, se podrá anexar cualquier tipo de proyecto empresarial que se desee. El gestor de proyectos, como idea principal es tener la capacidad de anexar un cualquier clase de proyecto que una empresa pueda tener al brindar un servicio.</div>
     </div>
   </div>
 </div>
