--- a/src/app/ComponentesAngular/login/login.component.html
+++ b/src/app/ComponentesAngular/login/login.component.html
@@ -2,9 +2,9 @@
 <div id="cuerpo-login">
   <div class="register">
     <div class="textos">
-      <div class="titulo">titulo</div>
+      <div class="titulo">Se Parte de Nosotros </div>
       <div class="l"></div>
-      <div class="text-cuerpo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa ducimus temporibus ratione pariatur cupiditate autem aliquam modi voluptates fuga quos dolores quam, voluptatibus quis consequuntur similique, enim nemo aperiam sunt.</div>
+      <div class="text-cuerpo">Para que puedas empezar a administrar tus proyectos junto con tus clientes y posibles inversionistas, debes primero llenar los datos para tu cuenta .</div>
     </div>
     <div class="item">
         <div class="comp">
@@ -60,12 +60,23 @@
           <!---------------------->
           <div class="s-item">
               <div class="term">
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus id nesciunt magni perferendis doloremque, recusandae illo molestias, vel sed laboriosam placeat. Eligendi suscipit doloremque, natus facilis est id! Fugit!</div>
+                <!---Terminos  y condiciones (link)--->
+                <div>Terminos y condiciones para el uso del Servico </div>
               </div>
             </div>
         </div>
     </div>
   </div>
-  <div class="login"></div>
+  <div class="login">
+    <!----Segunda parte--------->
+    <div class="Ingreso">
+        <div>Nombre o correo</div>
+        <input type="text">
+      </div>
+      <div class="ContraIngreso">
+          <div>Contrasenna</div>
+          <input type="password">
+        </div>
+  </div>
 </div>
 </div>
