--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
         <div class="btn" routerLink="/Home">Home</div>
         <div class="btn" routerLink="/Login">Login</div>
+        <div class="btn" routerLink="/datos-nuvo-pro">xxxxx</div>
 </nav>
 <!--<app-home></app-home>-->
 <router-outlet></router-outlet>
