--- a/src/app/ComponentesAngular/login/login.component.html
+++ b/src/app/ComponentesAngular/login/login.component.html
@@ -68,15 +68,40 @@
     </div>
   </div>
   <div class="login">
-    <!----Segunda parte--------->
-    <div class="Ingreso">
-        <div>Nombre o correo</div>
-        <input type="text">
-      </div>
-      <div class="ContraIngreso">
-          <div>Contrasenna</div>
-          <input type="password">
+    <!----Segunda parte LOGIN--------->
+    <div class ="sectorlog">
+        <a >Ingrese con el usuario asignado</a>
+        
+    </div>
+    <div class="imagen"> <a >*</a>     </div>
+    <div class="item">
+        <div class="Texto">
+          <div class="dato" >Nombre o correo</div>
+        <input type="tt">
         </div>
+      </div>
+    <div class="item2">
+        <div class="Texto2">
+          <div class="dato">Contraseña</div>
+          <input type="password"></div>
+        </div>
+    <div class="Boton">
+        <div class="textoBoton">
+            <a>__________________________</a>
+            <button id="button">Ingresar</button>
+            
+        </div>
+        <div class="recuperar">
+            <i > * Olvide mi contraseña</i>
+            
+        </div>
+        <div class="cuentaDuda">
+            <i > * ¿Preguntas sobre tu cuenta?</i>
+        </div>
+      </div>
+   
+
+
   </div>
 </div>
 </div>
