--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav>
         <div class="btn" routerLink="/Home">Home</div>
         <div class="btn" routerLink="/Login">Login</div>
-        <div class="btn" routerLink="/datos-nuvo-pro">xxxxx</div>
+        <div class="btn" routerLink="/ingreso-user">ingresoUser</div>
 </nav>
 <!--<app-home></app-home>-->
 <router-outlet></router-outlet>
-<footer>algo</footer>
+<footer></footer>
