--- a/src/app/ComponentesAngular/ingreso-user/ingreso-user.component.html
+++ b/src/app/ComponentesAngular/ingreso-user/ingreso-user.component.html
@@ -1,42 +1,36 @@
 <div class="Cuerpo" >
-        <button id="button1">usuario </button>
-        <button id="button2">Proyectos Realizados </button>
-        <button id="button3">Nuevo Proyecto</button>
-        <button id="button4">Proyecto en Marcha</button>
-        <button id="button5">Agregar un Proyecto</button>
-    
+    <button id="button1">usuario </button>
+    <button id="button2">Proyectos Realizados </button>
+    <button id="button3">Nuevo Proyecto</button>
+    <button id="button4">Proyecto en Marcha</button>
+    <button id="button5">Agregar un Proyecto</button>
 
-    <div class="botones">
-        <a>ACA ESTAN LOS BOTONES</a>
+
+<div class="botones">
+    <a>ACA ESTAN LOS BOTONES</a>
+</div>
+<div class="informacion">
+    <a >info</a>
+    <!-- DIVISIONES 5 SECTORES  -->
+    <!-- DIVISIONES 5 SECTOR 1 infor del usuario -->
+    <!-- DIVISIONES 5 SECTOR 2  xxxx-->
+    <!-- DIVISIONES 5 SECTOR 3  iamgen del usuario-->
+    <!-- DIVISIONES 5 SECTOR 4  imagen de la empresa-->
+    <!-- DIVISIONES 5 SECTOR 5  comentario sobre la empresa  -->
+    <div class="sect">
+        <div class="sub_sect">
+            <div class="texto">sector 1</div>   
+            <div class="texto">Nombre de usuario</div>   
+            <div class="texto">Empresa vinculada</div>   
+            <div class="texto">lugar del proyecto</div>  
+        </div>
+        <div class="sub_sect">2</div>
     </div>
-    <div class="informacion">
-        <a >info</a>
-        <!-- DIVISIONES 5 SECTORES  -->
-        <!-- DIVISIONES 5 SECTOR 1 infor del usuario -->
-        <!-- DIVISIONES 5 SECTOR 2  xxxx-->
-        <!-- DIVISIONES 5 SECTOR 3  iamgen del usuario-->
-        <!-- DIVISIONES 5 SECTOR 4  imagen de la empresa-->
-        <!-- DIVISIONES 5 SECTOR 5  comentario sobre la empresa  -->
-        <div class="area1">
-           <div class="Sector1"> 
-                <div class="texto">sector 1</div>   
-                <div class="texto">Nombre de usuario</div>   
-                <div class="texto">Empresa vinculada</div>   
-                <div class="texto">lugar del proyecto</div>   
-            </div>
-            <div class="Sector2"> 
-                <i >sector 2</i>
-            </div>
-       </div>
-        <div class="Sector3"> 
-                <i >sector 3</i>
-        </div>
-        <div class="Sector4"> 
-                <i >sector 4</i>
-        </div>
-        <div class="Sector5"> 
-                <i >sector 5</i>
-        </div>
+    <div class="sect">
+        <div class="sub_sect_img">3</div>
+        <div class="sub_sect_img">4</div>
+        <div class="sub_sect_img">4</div>
     </div>
+</div>
 
 </div>
