--- a/src/app/ComponentesAngular/ingreso-user/ingreso-user.component.scss
+++ b/src/app/ComponentesAngular/ingreso-user/ingreso-user.component.scss
@@ -16,73 +16,27 @@ height=alto
         display: flex;
         color: black;       
     }
-    /* ----------------------------------*/
-    
-  .area1{
-      clear: both;
-    border: red 2px solid;
-    margin: 20%px;
-    height: 90%;
-    width: auto;
-    .Sector1{
-        float: left;
-        border: red 2px solid;
-        margin: 5px;
-        position: relative;
-        width: 40%;
+    .informacion{
+        width: 100%;
         height: auto;
-        display:  flex;    
-        .texto{
-            width: 100% ;
-            height: 70%;
-            //background-color:green;
-            padding: 12px;
-            font-size: 20px;
-            font-weight: 100
+        .sect{
+            width: 100%;
+            height: auto;
+            position: relative;
+            display: flex;
+            border: 2px solid red;
+            .sub_sect{
+                width: 50%;
+                height: 200px;
+                border: 2px solid blue;
+            }
+            .sub_sect_img{
+                width: 50%;
+                height: 300px;
+                border: 2px solid blue;
+            }
         }
     }
-    .Sector2{
-        float: right;
-        border: red 2px solid;
-        margin:  9px ; 
-        position: relative;
-        width: 60%;
-        height: auto;
-        display:  flex;        
-    } 
-  }   
-       
-    .Sector3{
-        float: left;
-        clear: both;
-        border: red 2px solid;
-        margin: 5px;
-        //position: relative;
-        width: 40%;
-        height: 50%;
-       
-    }
-    .Sector4{
-        float: right;
-        clear: both;
-        border: red 2px solid;
-        margin: 5px;
-        //position: relative;
-        width: 20%;
-        height: 50%;
-       
-    }
-    .Sector5{
-        float: right;
-        clear: both;
-        border: red 2px solid;
-        margin: 5px;
-        //position: relative;
-        width: 30%;
-        height: 50%;
-       
-    }  
-
 
 
 }
